dd aroma and acid
